# uvuntu

./: .gitignore  CMakeLists.txt  dependencies.cmake  main.cpp
src/: CMakeLists.txt
src/able/: clickable.cpp  clickable.hpp
src/clickable/: CMakeLists.txt  clickable.cpp
src/config/: CMakeLists.txt  config.hpp
src/driver/: CMakeLists.txt  driver.cpp  driver.hpp
src/driver/detactor/: CMakeLists.txt  detactor.cpp  detactor.hpp
src/loader/: CMakeLists.txt  imgLoader.cpp  imgLoader.hpp
src/manager/: CMakeLists.txt  objectManager.cpp  objectManager.hpp
src/object/: CMakeLists.txt  object.cpp  object.hpp
src/object/Icon/: CMakeLists.txt  icon.cpp  icon.hpp  icons.cpp  icons.hpp
src/object/block/: CMakeLists.txt  block.cpp  block.hpp
src/object/button/: CMakeLists.txt  button.cpp  button.hpp
src/object/cursor/: CMakeLists.txt  cursor.cpp  cursor.hpp
src/object/drag/: CMakeLists.txt  drag.cpp  drag.hpp
src/object/icon/: CMakeLists.txt  icon.cpp  icon.hpp
src/object/page/: CMakeLists.txt  closeButton.cpp  closeButton.hpp  page.cpp  page.hpp  titleBar.cpp  titleBar.hpp
src/object/taskbar/: CMakeLists.txt  taskbar.cpp  taskbar.hpp
src/object/texture/: CMakeLists.txt  texture.cpp  texture.hpp
src/resources/: .img.json
src/utils/: CMakeLists.txt  hangle.hpp  path.cpp  path.hpp  utils.cpp  utils.hpp
